--- a/styles/scss/variaveis.scss
+++ b/styles/scss/variaveis.scss
@@ -1,3 +1,7 @@
-$color-blue: rgb(73, 73, 230);
+/* COLORS */
+$color-blue: #0a15d7;
 $color-white: #fff;
 $color-black: #000;
+$color-green: #0f810f;
+$color-purple: #671a67;
+$color-brown: #ae2626;
