Otimizando o código no SASS

--- a/styles/css/style.css
+++ b/styles/css/style.css
@@ -1,5 +1,5 @@
 /* COLORS */
-.btn, .btn-marrom, .btn-roxo, .btn-verde, .btn-azul {
+.btn {
   width: 200px;
   padding: 10px 0;
   border: 0;
@@ -8,46 +8,39 @@
   text-transform: uppercase;
   display: block;
   margin: 10px 0;
-}
-
-.btn-azul {
-  background: #0a15d7;
   color: #fff;
 }
-.btn-azul:hover {
+.btn.btn-azul {
+  background: #0a15d7;
+}
+.btn.btn-azul:hover {
   color: #0a15d7;
   letter-spacing: 3px;
   border: 1px solid #0a15d7;
   background: none;
 }
-
-.btn-verde {
+.btn.btn-verde {
   background: #0f810f;
-  color: #fff;
 }
-.btn-verde:hover {
+.btn.btn-verde:hover {
   color: #0f810f;
   letter-spacing: 3px;
   border: 1px solid #0f810f;
   background: none;
 }
-
-.btn-roxo {
+.btn.btn-roxo {
   background: #671a67;
-  color: #fff;
 }
-.btn-roxo:hover {
+.btn.btn-roxo:hover {
   color: #671a67;
   letter-spacing: 3px;
   border: 1px solid #671a67;
   background: none;
 }
-
-.btn-marrom {
+.btn.btn-marrom {
   background: #ae2626;
-  color: #fff;
 }
-.btn-marrom:hover {
+.btn.btn-marrom:hover {
   color: #ae2626;
   letter-spacing: 3px;
   border: 1px solid #ae2626;
