Utilizando o Minify, para reduzir o arquivo style.css

--- a/styles/css/style.css
+++ b/styles/css/style.css
@@ -1,60 +1,1 @@
-/* COLORS */
-.btn {
-  width: 200px;
-  padding: 10px 0;
-  border: 0;
-  border-radius: 10px;
-  transition: 0.5s all;
-  text-transform: uppercase;
-  display: block;
-  margin: 10px 0;
-  color: #fff;
-  cursor: pointer;
-}
-.btn.btn-azul {
-  background: #0a15d7;
-}
-.btn.btn-azul:hover {
-  color: #0a15d7;
-  letter-spacing: 3px;
-  border: 1px solid #0a15d7;
-  background: none;
-}
-.btn.btn-verde {
-  background: #0f810f;
-}
-.btn.btn-verde:hover {
-  color: #0f810f;
-  letter-spacing: 3px;
-  border: 1px solid #0f810f;
-  background: none;
-}
-.btn.btn-roxo {
-  background: #671a67;
-}
-.btn.btn-roxo:hover {
-  color: #671a67;
-  letter-spacing: 3px;
-  border: 1px solid #671a67;
-  background: none;
-}
-.btn.btn-marrom {
-  background: #ae2626;
-}
-.btn.btn-marrom:hover {
-  color: #ae2626;
-  letter-spacing: 3px;
-  border: 1px solid #ae2626;
-  background: none;
-}
-.btn.btn-preto {
-  background: #000;
-}
-.btn.btn-preto:hover {
-  color: #000;
-  letter-spacing: 3px;
-  border: 1px solid #000;
-  background: none;
-}
-
-/*# sourceMappingURL=style.css.map */
+.btn{width:200px;padding:10px 0;border:0;border-radius:10px;transition:.5s all;text-transform:uppercase;display:block;margin:10px 0;color:#fff;cursor:pointer}.btn.btn-azul{background:#0a15d7}.btn.btn-azul:hover{color:#0a15d7;letter-spacing:3px;border:1px solid #0a15d7;background:none}.btn.btn-verde{background:#0f810f}.btn.btn-verde:hover{color:#0f810f;letter-spacing:3px;border:1px solid #0f810f;background:none}.btn.btn-roxo{background:#671a67}.btn.btn-roxo:hover{color:#671a67;letter-spacing:3px;border:1px solid #671a67;background:none}.btn.btn-marrom{background:#ae2626}.btn.btn-marrom:hover{color:#ae2626;letter-spacing:3px;border:1px solid #ae2626;background:none}.btn.btn-preto{background:#000}.btn.btn-preto:hover{color:#000;letter-spacing:3px;border:1px solid #000;background:none}/*# sourceMappingURL=style.css.map */
